# rename-pdf

./: .gitignore  README.md  pyproject.toml  setup.py
src/: main.py
